# emdr-lightbar

./: .editorconfig  .env.example  .eslintrc.json  .gitignore  Caddyfile  Dockerfile  LICENSE  Makefile  Procfile  README.md  app.py  docker-compose.yml  index.css  index.html  index.js  justfile  package.json  pyproject.toml  requirements.txt  utils.py  uwsgi.ini
app/: .dockerignore  Dockerfile  app.py  requirements.txt  uwsgi.ini
app/frontend/: .eslintcache  package.json
app/frontend/public/: index.html
app/frontend/src/: App.js  constants.js  index.css
app/static/: base.css  client-session.js  index.html  patient-session.js  therapist-session.css  therapist-session.js  toggle-theme.js
app/static/lib/: Audiobar.css  Audiobar.js  ClientAudiobarController.js  ClientLightbarController.js  ClientMethodController.js  Clipboard.js  HelpController.js  Lightbar.css  Lightbar.js  Lightbarv2.js  PatientAudiobarController.js  PatientLightbarController.js  PatientMethodController.js  TherapistAudiobarController.js  TherapistLightbarController.js  TherapistMethodController.js  toggleTheme.js  utils.js
app/templates/client/: index.html  session.html
app/templates/error/: 404.html
app/templates/index/: index.html
app/templates/layouts/: base.html
app/templates/patient/: index.html  session.html
nginx/: nginx.conf
static/: client-session.html  client-session.js  index.html  index.js  new-session.css  new-session.html  new-session.js
static/lib/: ClientLightbarController.js  ClientSession.js  Lightbar.js  SessionControls.js  TherapistLightbarController.js
(+43 files in other folders)
